<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">通讯君</string>
    <string name="action_settings">Settings</string>
    <string name="person_name">姓名：</string>
    <string name="username_personal">用户名：</string>
    <string name="localfilescount_personal">本地文件数：</string>
    <string name="netfilecount_personal">云盘文件数：</string>
    <string name="username_logn">帐号</string>
    <string name="password_logn">密码</string>
    <string name="register_logn">注册新帐号</string>
    <string name="forgetpwd_logn">忘记密码？</string>
    <string name="submit_logn">立即登录</string>
    <string name="username_register">用户名：</string>
    <string name="password_register">密码：</string>
    <string name="passwordcomfirm_register">确认密码：</string>
    <string name="email_register">邮箱：</string>
    <string name="phone_register">手机号码：</string>
    <string name="sex_register">性别：</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="register_register">用户注册</string>
    <string name="submit_register">立即注册</string>
    <string name="delete_personalinfo">删除联系人</string>
    <string name="add_person">添加联系人</string>
    <string name="selectall">全选</string>
    <string name="newperson_fristname">姓氏：</string>
    <string name="newperson_secondname">名字：</string>
    <string name="newperson_phone">电话</string>
    <string name="newperson_email">电子邮件</string>
    <string name="newperson_address">地址</string>
	
	<string-array name="openfile_dialog_show">
	    <item >新建联系人</item>
	    <item >编辑联系人</item>
	    <item >导入联系人</item>
	</string-array>
	<string-array name="choisesources">
	    <item >本地联系人</item>
	    <item >本地文件</item>
	</string-array>
</resources>